# weather

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  README.md  VALIDATION_REPORT.md  pyproject.toml
.claude/: settings.json
.claude/agents/: vault-scribe.md  weather-data-expert.md
.claude/hooks/: vault_capture_reminder.py  vault_health.py
.claude/skills/caveman/: SKILL.md
.claude/skills/data-script/: SKILL.md  template.py
.claude/skills/data-validation/: SKILL.md
.claude/skills/minimal-docs/: SKILL.md
.claude/skills/model-training/: SKILL.md
.claude/skills/vault-capture/: SKILL.md
.claude/skills/vault-ingest/: SKILL.md
.claude/skills/vault-lint/: SKILL.md
.claude/skills/vault-query/: SKILL.md
.claude/skills/vault-seed/: SKILL.md
.claude/skills/weather-data/: SKILL.md
.claude/skills/worktree-first/: SKILL.md
data/: README.md
notebooks/: README.md  expl_nyc_polymarket_backtest.py  expl_prediction_market_dataset.py
notebooks/experiments/backtest-v2/: FINDINGS.md  PRE_REGISTRATION.md  depth_analysis.py  harness.py  run_is.py  run_offset_sweep.py  run_oos.py  strategies.py
notebooks/experiments/backtest-v3/: FINDINGS.md  accurate_nbs_cities.py  apr11_holdout.py  broader_test.py  build_features.py  capacity_analysis.py  capacity_v2.py  capacity_v3.py  classifier_approach.py  combined_portfolio.py  confidence_filter.py  consensus_form_time.py  consensus_form_variants.py  consensus_optimal_sweep.py  consensus_signal.py  debug_s4.py  deploy_spec.py  fade_strategy.py  failure_analysis.py  mispricing_surface.py  model_vs_market.py  nbs_gfs_only_consensus.py  order_provenance_v2.py  per_city_calibrated.py  per_station_model.py  real_ask_validation.py  seattle_deep_dive.py  sign_classifier.py  simple_baseline.py  simple_bias_strat.py  spread_analysis.py  strict_holdout.py  train_eval.py  v1_v2_compare.py
notebooks/experiments/multi-city/: comprehensive_strategy_synthesis.md  market_analysis_writeup.md  nbs_forecast_vs_market.md  nbs_uncertainty_filter.md  offset_scan.md  out_of_sample_validation.md
notebooks/experiments/nyc-polymarket/: exp01_NOTES.md  exp01_temp_to_price_response.py  exp02_NOTES.md  exp02_follow_running_max.py  exp03_NOTES.md  exp03_metar_running_max.py  exp04_NOTES.md  exp04_fade_morning_favorites.py  exp05_NOTES.md  exp05_fade_with_costs.py  exp06_NOTES.md  exp06_real_bid_ask.py  exp06b_real_bid_ask_fixed.py  exp07_NOTES.md  exp07_ladder_shape_filter.py  exp08_NOTES.md  exp08_paired_hedge.py  exp08b_NOTES.md  exp08b_verify_peaked_trades.py  exp12_NOTES.md  exp12_bias_conditioning.py  exp13_NOTES.md  exp13_strategies_from_bias.py  exp14_NOTES.md  exp14_strategy_d_oos.py  exp16_17_NOTES.md  exp16_kelly_stoploss_sim.py  exp17_combined_portfolio.py  exp18_NOTES.md  exp18_intraday_drift_and_entry_time.py  exp19_06b_NOTES.md  exp19_late_day_book_check.py  exp20_NOTES.md  exp20_portfolio_real_costs.py  exp21_22_NOTES.md  exp21_notional_cap_sim.py  exp22_win_regime_conditioning.py  exp23_25_NOTES.md  exp23_fav_below_current.py  exp24_NOTES.md  (+28 more)
notebooks/experiments/nyc-polymarket/exploratory/: expA_NOTES.md  expA_ladder_sum_arb.py  expB_NOTES.md  expB_winner_vs_losers.py  expC_NOTES.md  expC_volatility_regimes.py  expE_NOTES.md  expE_temp_price_lag.py  expG_NOTES.md  expG_mean_reversion.py  expH_NOTES.md  expH_real_book_replay.py  expI_NOTES.md  expI_ladder_arb_verify.py  expJ_NOTES.md  expK_NOTES.md  expK_stratD_real_ask.py  expL_NOTES.md  expL_pump_across_ladders.py  expM_NOTES.md  expM_stratD_V3_hourly_backtest.py  expN_first_live_alert.md  expO_active_arb_exec.md  expP_NOTES.md  expP_arb_persistence_distribution.py  expQ_audit_report.md  expQ_polymarket_data_audit.py  expR_NOTES.md  expR_taker_bot_fingerprint.py  expS_fee_aware_arb.md  expT_slippage_aware_arb.py
scripts/: README.md  pull_all_us_cities.py
scripts/download/: README.md  _common.py  _common.sh  prediction_market_analysis.sh
scripts/download/iem_asos_1min/: README.md  script.py
scripts/download/polymarket_weather/: README.md  script.py  validate.py
scripts/download/polymarket_weather_slugs/: script.py
scripts/download/prediction_market_analysis/: README.md  script.py
scripts/fetch/: README.md
scripts/fetch/polymarket_weather_slugs/: README.md  script.py
scripts/hrrr/: download.py  validate.py
scripts/iem_asos_1min/: download.py  transform.py  validate.py
scripts/iem_metar/: download.py  transform.py  validate.py
scripts/iem_mos/: download.py  transform.py  validate.py
scripts/model/: daily_max_model.py
scripts/polymarket_book/: download.py  transform.py  validate.py  watchman.py
scripts/polymarket_prices_history/: download.py  transform.py  validate.py
scripts/polymarket_weather/: download.py  live_now.py  live_recommender.py  paper_ledger.py  transform.py  validate.py
scripts/polymarket_weather_slugs/: download.py
scripts/transform/: README.md
scripts/transform/polymarket_weather_parquet/: script.py
src/: README.md
src/consensus_fade_plus1/: ARCHITECTURE.md  DAEMON_NOTES.md  QUICKSTART.md  STRATEGY.md  __init__.py  backtest.py  cli.py  daemon.py  discover.py  node.py  persistence.py  setup.py  strategy.py
src/lib/polymarket/: __init__.py  client.py  markets.py  orders.py  redeem.py  setup.py  ws_subscribe_patch.py
src/lib/watchers/: README.md  __init__.py  _iem_mos_helpers.py  base.py  features.py  gfs.py  hrrr.py  markets.py  metar.py  nbs.py
src/lib/weather/: __init__.py  consensus.py  forecasts.py  hrrr.py  timezones.py
strategies/: README.md
strategies/consensus_fade_plus1/: backtest.py  recommender.py
tests/: test_reconciled_position_seeding.py
tests/lib/polymarket/: test_ws_subscribe_patch.py  test_ws_subscribe_upstream_regression.py
vault/Weather Vault/: Execution Stack — Source Review.md  Project Scope.md
vault/Weather Vault/raw-sources/: README.md
vault/Weather Vault/wiki/: index.md  log.md
weather-market-slugs/: README.md
(+33 files in other folders)
